<resources>
    <string name="app_name">Gao Sach 24h</string>
    <string name="gaosach24h">Gạo Sạch 24h</string>
    <string name="nhodangnhap">Nhớ đăng nhập</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remind">remind</string>
    <string name="settings">settings</string>
    <string name="favorite_words">favorite_words</string>
    <string name="dictionary">dictionary</string>
    <string name="topic">topic</string>
    <string name="recent_words">recent_words</string>
    <string name="my_words">my_words</string>
    <string name="languages">languages</string>
    <string name="network">network</string>
    <string name="rate">rate</string>
    <string name="help">help</string>
    <string name="about">about</string>
    <string name="qu_n_m_t_kh_u">Quên mật khẩu?</string>
    <string name="ng_k_t_i_kho_n">Đăng kí tài khoản!</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Gạo Sạch 24h</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="gao_thom_deo">Gạo thơm dẻo</string>

</resources>
